# Sentinels

./: .dockerignore  .env.example  .flake8  .gitignore  CONTAINERIZATION_SUMMARY.txt  DOCKER_BEST_PRACTICES.md  Dockerfile  Dockerfile.stable  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.enterprise.yml  docker-compose.yml  pyproject.toml  pytest.py  requirements.txt  run.sh  sentinels.service  start.sh
.github/workflows/: ci.yml
apps/api-server/: .dockerignore  Dockerfile  auth.py  database.py  main.py  models.py  requirements.txt  schemas.py
apps/detection-engine/: Dockerfile  requirements.txt
apps/load-tester/: benchmark.py
apps/processing-engine/: .dockerignore  Dockerfile  analytics.py  requirements.txt  test_analytics.py
apps/schemas/: sensor_event.proto  sensor_event_pb2.py
apps/sensor-agent/: Dockerfile  agent.py  requirements.txt
apps/sensor-management/: Dockerfile  main.py  requirements.txt  schemas.py
apps/soc-dashboard/: package-lock.json  package.json
benchmarks/: README.md  loadtest.py  sentinels.bench.yml
build_scripts/: build_sentinels.sh  generate_macOS_launchctl_service_files.py
config/: honeytrace.yml  sentinels.yml
docs/: Makefile  benchmark_report.md  tenant_isolation.md
infra/: .env.example  docker-compose.yml
k8s/: configmap.yaml  deployment.yaml
legacy/: Dockerfile.latest  docker-compose.yml
pyflink/: __init__.py
sentinels/: config.py  logger.py
terraform/: main.tf  variables.tf
tests/: test_config.py  test_events.py  test_metrics.py  test_ratelimit.py  test_services.py
tools/: load_tester.py
(+152 files in other folders)
